# llmai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dev/: shared.py  test_anthropic.py  test_bedrock.py  test_cerebras.py  test_chatgpt.py  test_deepseek.py  test_fireworks.py  test_google.py  test_litellm.py  test_lmstudio.py  test_openai.py  test_openrouter.py  test_togetherai.py  test_vertex.py
llmai/: __init__.py  client.py
llmai/anthropic/: __init__.py  client.py
llmai/azure/: __init__.py  client.py
llmai/bedrock/: __init__.py  client.py
llmai/cerebras/: __init__.py  client.py
llmai/chatgpt/: __init__.py  client.py
llmai/deepseek/: __init__.py  client.py
llmai/fireworks/: __init__.py  client.py
llmai/google/: __init__.py  client.py
llmai/litellm/: __init__.py  client.py
llmai/lmstudio/: __init__.py  client.py
llmai/openai/: __init__.py  client.py
llmai/openrouter/: __init__.py  client.py
llmai/shared/: __init__.py  base.py  configs.py  errors.py  logs.py  messages.py  providers.py  reasoning.py  response_formats.py  responses.py  schema.py  tooling.py  tools.py
llmai/togetherai/: __init__.py  client.py
llmai/vertex/: __init__.py  client.py
src/llmai/: __init__.py
src/llmai/core/: anthropic.py  anthropic_client.py  base_client.py  client.py  google.py  google_client.py  openai.py  openai_client.py
src/llmai/models/: errors.py  logs.py  messages.py  providers.py  response_formats.py  responses.py  tools.py
src/llmai/tools/: handlers.py  manager.py
src/llmai/utils/: get_env.py  llm_client_error_handler.py  llm_provider.py  schema.py  schema_utils.py
tests/: test_clients.py  test_messages.py  test_tools.py
