[project]
name = "llmai"
version = "0.0.1"
description = "Coming soon..."
readme = "README.md"
authors = [
    { name = "sauravniraula", email = "developmentsaurav@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79.0",
    "google-genai>=1.62.0",
    "openai>=2.18.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "llmai"
module-root = ""