[project]
name = "llmai"
version = "0.1.1"
description = "Unified Python client for OpenAI, Azure OpenAI, Anthropic, Gemini, Vertex AI, DeepSeek, Bedrock, and ChatGPT."
readme = "README.md"
authors = [{ name = "sauravniraula", email = "developmentsaurav@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79.0",
    "boto3>=1.42.89",
    "google-genai>=1.62.0",
    "openai>=2.18.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "llmai"
module-root = ""
