[project]
name = "llmai"
version = "0.2.2"
description = "Unified Python client for OpenAI, Azure OpenAI, Vertex AI, Anthropic, Gemini, DeepSeek, Bedrock, and ChatGPT."
readme = "README.md"
authors = [{ name = "sauravniraula", email = "developmentsaurav@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "anthropic>=0.79.0",
    "boto3>=1.42.89",
    "google-genai>=1.62.0",
    "openai>=2.18.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "llmai"
module-root = ""
